# frontend/openapi.json
@@ -4191,6 +4191,17 @@
               }
             ],
             "title": "Strategies Found"
+          },
+          "error_message": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Error Message"
           }
         },
         "type": "object",
